feat: add catalog brand service

--- a/src/Catalog/appsettings.Development.json
+++ b/src/Catalog/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SvcDbContext": "Server=PC10123\\SQLSERVER2022;Database=Catalog_DB;Trusted_Connection=true;TrustServerCertificate=true;"
   }
 }
